[package]
name = "mediaremote-rs"
version = "0.1.2"
edition = "2024"
description = "Access macOS MediaRemote.framework to get now playing information"
license = "MIT"
repository = "https://github.com/TNXG/mediaremote-rs"
homepage = "https://crates.io/crates/mediaremote-rs"
keywords = ["macos", "media", "now-playing", "music", "apple"]
categories = ["os::macos-apis", "multimedia"]
readme = "README.md"
include = [
    "src/**/*",
    "build.rs",
    "resources/libmediaremote_rs.dylib",
    "LICENSE",
    "README.md"
]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
block2 = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.177"
